<resources>
    <string name="app_name">LAVADA</string>
    <string name="short_video_dating">short video dating</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="create_brilliant_learning_always">Create brilliant learning pathways</string>
    <string name="login_to_account">Log in to your account</string>
    <string name="have_an_acc_login">Have an account? Log in</string>
    <string name="create_account">Create account</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign up </string>
    <string name="email_hint">e-mail</string>
    <string name="password_hint">password</string>
    <string name="confirm_term_of_service_pp">By continuing, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="about_myself">About myself</string>
    <string name="we_will_recommend_diets">We will recommend diets and exercises  that suit you</string>
    <string name="name_hint">name</string>
    <string name="sex_hint">sex</string>
    <string name="age_hint">age</string>
    <string name="location_hint">location</string>
    <string name="my_location">My location</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="looking_for">I\'m looking for</string>
    <string name="add_video">Add video</string>
    <string name="record">Record</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="forgot_assword">Forgot password?</string>
    <string name="or_sign_with_another">Or sign in with another email</string>
    <string name="we_will_send_new_pass">We will send a new password to your email</string>
    <string name="send_password">Send password</string>
    <string name="password_recovery">Password recovery</string>
    <string name="least_character_pass_rule_hint">At least 8 characters, including uppercase and  numbers</string>
    <string name="only_premium">Only premium</string>
    <string name="reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="this_video_contain_inappropariate_content_quest">This video contains inappropriate content?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="your_video_is_locked">Your video is locked</string>
    <string name="this_video_contain_inappropariate_content">Video contains inappropriate content</string>
    <string name="edit_video">Edit video</string>
    <string name="premium">Premium</string>
    <string name="buy_premium">Buy premium</string>
    <string name="anket_upper_other">Анкета выше других в ленте</string>
    <string name="daily_coins">Ежедневное начисление коинов</string>
    <string name="watch_who_like_your">Просмотр тех, кто тебя лайкнул</string>
    <string name="can_chat_first">Писать можно первым</string>
    <string name="gold_border_avatar">Золотая рамка аватарки</string>
    <string name="watch_social_users">Просмотр соц сетей людей</string>
    <string name="match">Match</string>
    <string name="send_message">Send message</string>
    <string name="your_messages_will_be_here">Your messages  will be here</string>
    <string name="chats">Chats</string>
    <string name="like">Like</string>
    <string name="block">Block</string>
    <string name="delete">Delete</string>
    <string name="your_likes_will_be_here">Your likes will be here</string>
    <string name="type_your_message">Type your message</string>
    <string name="gifts">Gifts</string>
    <string name="new_label">new</string>
    <string name="top_up">top up</string>
    <string name="top_up_your_account_buy_gift">Top up your account to buy a gift</string>
    <string name="profile">Profile</string>
    <string name="coins">Coins </string>
    <string name="view_preview_profile">View preview profile</string>
    <string name="add_new_video">Add new video</string>
    <string name="like_list">Like list</string>
    <string name="gift_list">Gift list</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add_photo">add photo</string>
    <string name="aboute_myself">about myself</string>
    <string name="social_networks">Social network</string>
    <string name="only_seen_by_premium">Оnly seen by premium users</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="add">add</string>
    <string name="save">Save</string>
    <string name="coins_balance">Coins balance</string>
    <string name="about">About</string>
    <string name="super_coins_box">Super coins box</string>
    <string name="can_only_be_purch_once">*can only be purchased once</string>
    <string name="shop">Shop</string>
    <string name="ficha_is_coming_soon">Ficha is coming soon...</string>
    <string name="i_ll_be_waiting">Ок, i’ll be waiting</string>
    <string name="facebook_app_id">672136000645610</string>
    <string name="fb_login_protocol_scheme">fb672136000645610</string>
    <string name="log_in_to_your_account">Sing in</string>
    <string name="log_in_btn_label">Log in</string>
    <string name="hint_password">password</string>
    <string name="hint_e_mail">e-mail</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="black_list">Black list</string>
    <string name="help">Help</string>
    <string name="about_lavada">About Lavada</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="text_desc_password">At least 8 characters, including uppercase and numbers</string>
    <string name="messages">Messages</string>
    <string name="matches">Matches</string>
    <string name="likes">Likes</string>
    <string name="watching_video">Watching video</string>
    <string name="news">News</string>
</resources>