<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/tbBackAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/chevron_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_change_password_label"
        style="@style/Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="@id/tbBackAction"
        app:layout_constraintTop_toTopOf="@id/tbBackAction" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_old_password"
        style="@style/MyOutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:endIconDrawable="@drawable/show_password_selector"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tv_change_password_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_password"
        style="@style/MyOutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:endIconDrawable="@drawable/show_password_selector"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText=" "
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_old_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_ed_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_label_password_desc"
        style="@style/Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_desc_password"
        android:textColor="@color/Secondary_text"
        app:layout_constraintTop_toBottomOf="@id/til_new_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="46dp"
        android:enabled="false"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/Primary_text"
        app:cornerRadius="@dimen/default_margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>