<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_background">

    <View
        android:id="@+id/fl_background"
        android:layout_width="match_parent"
        android:layout_height="497dp"
        android:background="@drawable/background_welcome_layout"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_label_welcome"
        style="@style/Title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/fl_background" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_label_login"
        style="@style/Regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/log_in_to_your_account"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/MyOutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_label_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_e_mail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/MyOutlinedBoxStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:endIconDrawable="@drawable/show_password_selector"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperText=" "
        app:helperTextEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="Have an account? Log in"
        android:textColor="@color/Link_text"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <ImageButton
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_16"
        android:background="@drawable/google_button"
        app:layout_constraintEnd_toStartOf="@+id/btn_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_log_in" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_16"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/btn_google"
        app:layout_constraintTop_toBottomOf="@id/tv_log_in" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="By continuing, you agree to our"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_termOfUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="Terms of Service"
        android:textColor="@color/Link_text"
        app:layout_constraintStart_toEndOf="@+id/tv_before"
        app:layout_constraintTop_toBottomOf="@id/btn_google" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="and Privacy Policy."
        android:textColor="@color/Link_text"
        app:layout_constraintTop_toBottomOf="@id/tv_before" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/DefaultButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="46dp"
        android:enabled="false"
        android:text="@string/log_in_btn_label"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>